Phase-5/gcloud/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: phase5-todo
  labels:
    app: phase5-todo
    environment: production
